@@ -8,10 +8,11 @@ stub-zone:
 	stub-addr: 193.0.14.129 	# K.ROOT-SERVERS.NET.
 CONFIG_END
 
-SCENARIO_BEGIN Test resolver prefetch of NS record for moved domain
+SCENARIO_BEGIN Test resolver prefetch and a moved domain 2.
+; for slightly different query pattern.
 
 ; K.ROOT-SERVERS.NET.
-RANGE_BEGIN 0 200
+RANGE_BEGIN 0 500
 	ADDRESS 193.0.14.129 
 ENTRY_BEGIN
 MATCH opcode qtype qname
@@ -26,11 +27,11 @@ K.ROOT-SERVERS.NET.	IN	A	193.0.14.129
 ENTRY_END
 
 ENTRY_BEGIN
-MATCH opcode qtype qname
-ADJUST copy_id
+MATCH opcode subdomain
+ADJUST copy_id copy_query
 REPLY QR NOERROR
 SECTION QUESTION
-www.example.com. IN A
+com. IN A
 SECTION AUTHORITY
 com.	IN NS	a.gtld-servers.net.
 SECTION ADDITIONAL
@@ -39,7 +40,7 @@ ENTRY_END
 RANGE_END
 
 ; a.gtld-servers.net. (before sale of domain)
-RANGE_BEGIN 0 20
+RANGE_BEGIN 0 30
 	ADDRESS 192.5.6.30
 ENTRY_BEGIN
 MATCH opcode qtype qname
@@ -60,14 +61,14 @@ REPLY QR NOERROR
 SECTION QUESTION
 example.com. IN A
 SECTION AUTHORITY
-example.com.	IN NS	ns.example.com.
+example.com.	86400 IN NS	old-ns.example.com.
 SECTION ADDITIONAL
-ns.example.com.		IN 	A	1.2.3.4
+old-ns.example.com.		86400 IN 	A	192.168.0.1
 ENTRY_END
 RANGE_END
 
 ; a.gtld-servers.net. (after sale of domain)
-RANGE_BEGIN 30 200
+RANGE_BEGIN 40 500
 	ADDRESS 192.5.6.30
 ENTRY_BEGIN
 MATCH opcode qtype qname
@@ -88,69 +89,83 @@ REPLY QR NOERROR
 SECTION QUESTION
 example.com. IN A
 SECTION AUTHORITY
-example.com.	IN NS	ns.example.com.
+example.com.	86400 IN NS	new-ns.example.com.
 SECTION ADDITIONAL
-ns.example.com.		IN 	A	8.8.8.8
+new-ns.example.com.		86400 IN 	A	172.16.0.1
 ENTRY_END
 RANGE_END
 
 ; ns.example.com. first owner
-RANGE_BEGIN 0 200
-	ADDRESS 1.2.3.4
+RANGE_BEGIN 0 500
+	ADDRESS 192.168.0.1
 ENTRY_BEGIN
 MATCH opcode qtype qname
 ADJUST copy_id
-REPLY QR NOERROR
+REPLY QR AA NOERROR
 SECTION QUESTION
 example.com. IN NS
 SECTION ANSWER
-example.com.	IN NS	ns.example.com.
+example.com.	300 IN NS	old-ns.example.com.
 SECTION ADDITIONAL
-ns.example.com.		IN 	A	1.2.3.4
+old-ns.example.com.		300 IN 	A	192.168.0.1
 ENTRY_END
 
 ENTRY_BEGIN
 MATCH opcode qtype qname
 ADJUST copy_id
-REPLY QR NOERROR
+REPLY QR AA NOERROR
 SECTION QUESTION
 www.example.com. IN A
 SECTION ANSWER
-www.example.com. 3600 IN A	10.20.30.40
+www.example.com. 300 IN A	10.1.1.1
 SECTION AUTHORITY
-example.com.	3600 IN NS	ns.example.com.
+example.com.	300 IN NS	old-ns.example.com.
 SECTION ADDITIONAL
-ns.example.com.	3600 	IN 	A	1.2.3.4
+old-ns.example.com.		300 IN 	A	192.168.0.1
 ENTRY_END
 RANGE_END
 
 ; ns.example.com. new owner
-RANGE_BEGIN 0 200
-	ADDRESS 8.8.8.8
+RANGE_BEGIN 0 500
+	ADDRESS 172.16.0.1
 ENTRY_BEGIN
 MATCH opcode qtype qname
 ADJUST copy_id
-REPLY QR NOERROR
+REPLY QR AA NOERROR
 SECTION QUESTION
 example.com. IN NS
 SECTION ANSWER
-example.com.	IN NS	ns.example.com.
+example.com.	86400 IN NS	new-ns.example.com.
 SECTION ADDITIONAL
-ns.example.com.		IN 	A	8.8.8.8
+new-ns.example.com.		86400 IN 	A	172.16.0.1
 ENTRY_END
 
 ENTRY_BEGIN
 MATCH opcode qtype qname
 ADJUST copy_id
-REPLY QR NOERROR
+REPLY QR AA NOERROR
+SECTION QUESTION
+old-ns.example.com. IN A
+SECTION ANSWER
+old-ns.example.com. 86400 IN A	172.16.0.1
+SECTION AUTHORITY
+example.com.	86400 IN NS	new-ns.example.com.
+SECTION ADDITIONAL
+new-ns.example.com.		86400 IN 	A	172.16.0.1
+ENTRY_END
+
+ENTRY_BEGIN
+MATCH opcode qtype qname
+ADJUST copy_id
+REPLY QR AA NOERROR
 SECTION QUESTION
 www.example.com. IN A
 SECTION ANSWER
-www.example.com. 3600 IN A	88.88.88.88
+www.example.com. 86400 IN A	10.2.2.2
 SECTION AUTHORITY
-example.com.	3600 IN NS	ns.example.com.
+example.com.	86400 IN NS	new-ns.example.com.
 SECTION ADDITIONAL
-ns.example.com.	3600 	IN 	A	8.8.8.8
+new-ns.example.com.		86400 IN 	A	172.16.0.1
 ENTRY_END
 RANGE_END
 
@@ -161,42 +176,22 @@ SECTION QUESTION
 www.example.com. IN A
 ENTRY_END
 ; recursion happens here.
-STEP 5 CHECK_ANSWER
+STEP 10 CHECK_ANSWER
 ENTRY_BEGIN
 MATCH all ttl
 REPLY QR RD RA NOERROR
 SECTION QUESTION
 www.example.com. IN A
 SECTION ANSWER
-www.example.com. 3600 IN A	10.20.30.40
+www.example.com.	300 IN A	10.1.1.1
 SECTION AUTHORITY
-example.com.	3600 IN NS	ns.example.com.
+example.com.		300 IN NS	old-ns.example.com.
 SECTION ADDITIONAL
-ns.example.com.	3600 	IN 	A	1.2.3.4
+old-ns.example.com.	300 IN A	192.168.0.1
 ENTRY_END
 
-STEP 10 QUERY
-ENTRY_BEGIN
-REPLY RD
-SECTION QUESTION
-example.com. IN NS
-ENTRY_END
-; recursion happens here.
-STEP 15 CHECK_ANSWER
-ENTRY_BEGIN
-MATCH all ttl
-REPLY QR RD RA NOERROR
-SECTION QUESTION
-example.com. IN NS
-SECTION ANSWER
-example.com.	3600 IN NS	ns.example.com.
-SECTION AUTHORITY
-SECTION ADDITIONAL
-ns.example.com.	3600 	IN 	A	1.2.3.4
-ENTRY_END
-
-; after 1800 secs still the cached answer
-STEP 20 TIME_PASSES ELAPSE 1800
+; after 40 secs still the cached answer
+STEP 20 TIME_PASSES ELAPSE 40
 
 STEP 30 QUERY
 ENTRY_BEGIN
@@ -212,41 +207,21 @@ REPLY QR RD RA NOERROR
 SECTION QUESTION
 www.example.com. IN A
 SECTION ANSWER
-www.example.com. 1800 IN A	10.20.30.40
+www.example.com.	260 IN A	10.1.1.1
 SECTION AUTHORITY
-example.com.	1800 IN NS	ns.example.com.
+example.com.		260 IN NS	old-ns.example.com.
 SECTION ADDITIONAL
-ns.example.com.	1800 	IN 	A	1.2.3.4
+old-ns.example.com.	260 IN A	192.168.0.1
 ENTRY_END
 
-STEP 44 QUERY
-ENTRY_BEGIN
-REPLY RD
-SECTION QUESTION
-example.com. IN NS
-ENTRY_END
-; recursion happens here.
-STEP 45 CHECK_ANSWER
-ENTRY_BEGIN
-MATCH all ttl
-REPLY QR RD RA NOERROR
-SECTION QUESTION
-example.com. IN NS
-SECTION ANSWER
-example.com.	1800 IN NS	ns.example.com.
-SECTION AUTHORITY
-SECTION ADDITIONAL
-ns.example.com.	1800 	IN 	A	1.2.3.4
-ENTRY_END
-
-; after 1440 we are 360 seconds before the expiry
-STEP 50 TIME_PASSES ELAPSE 1440
+; after 230 we are 30 seconds before expiry, prefetch happens.
+STEP 50 TIME_PASSES ELAPSE 230
 
 STEP 60 QUERY
 ENTRY_BEGIN
 REPLY RD
 SECTION QUESTION
-example.com. IN NS
+www.example.com. IN A
 ENTRY_END
 ; recursion happens here.
 STEP 70 CHECK_ANSWER
@@ -254,64 +229,85 @@ ENTRY_BEGIN
 MATCH all ttl
 REPLY QR RD RA NOERROR
 SECTION QUESTION
-example.com. IN NS
+www.example.com. IN A
 SECTION ANSWER
-example.com.	360 IN NS	ns.example.com.
+www.example.com.	30 IN A	10.1.1.1
 SECTION AUTHORITY
+example.com.		30 IN NS	old-ns.example.com.
 SECTION ADDITIONAL
-ns.example.com.	360 	IN 	A	1.2.3.4
+old-ns.example.com.	30 IN A	192.168.0.1
 ENTRY_END
 
 STEP 80 TRAFFIC
 ; let traffic flow for prefetch to happen
 
-; check result of that prefetch
+; we updated from the old-ns.
 STEP 90 QUERY
 ENTRY_BEGIN
 REPLY RD
 SECTION QUESTION
-example.com. IN NS
+www.example.com. IN A
 ENTRY_END
 ; recursion happens here.
-STEP 91 CHECK_ANSWER
+STEP 100 CHECK_ANSWER
 ENTRY_BEGIN
 MATCH all ttl
 REPLY QR RD RA NOERROR
 SECTION QUESTION
-example.com. IN NS
+www.example.com. IN A
 SECTION ANSWER
-; this record is unchanged even though it now points to the
-; new registrant.  Thus it keeps counting down.
-example.com.	360 IN NS	ns.example.com.
+www.example.com.	300 IN A	10.1.1.1
 SECTION AUTHORITY
+example.com.		30 IN NS	old-ns.example.com.
 SECTION ADDITIONAL
-ns.example.com.	3600 	IN 	A	8.8.8.8
+old-ns.example.com.	300 IN A	192.168.0.1
 ENTRY_END
 
+; the NS record times out after 31 seconds.
+STEP 160 TIME_PASSES ELAPSE 31
 
-; after 360 + 2000 we are after the change to new owner.
-STEP 100 TIME_PASSES ELAPSE 2360
-
-; the NS record should have timed out.
-STEP 120 QUERY
+; fetch it
+STEP 170 QUERY
 ENTRY_BEGIN
 REPLY RD
 SECTION QUESTION
 www.example.com. IN A
 ENTRY_END
 ; recursion happens here.
-STEP 130 CHECK_ANSWER
+STEP 180 CHECK_ANSWER
 ENTRY_BEGIN
 MATCH all ttl
 REPLY QR RD RA NOERROR
 SECTION QUESTION
 www.example.com. IN A
 SECTION ANSWER
-www.example.com. 3600 IN A	88.88.88.88
+www.example.com.	86400 IN A	10.2.2.2
 SECTION AUTHORITY
-example.com.	3600 IN NS	ns.example.com.
+example.com.		86400 IN NS	new-ns.example.com.
 SECTION ADDITIONAL
-ns.example.com.	1240 	IN 	A	8.8.8.8
+new-ns.example.com.	86400 IN A	172.16.0.1
+ENTRY_END
+
+; a reply from cache 
+STEP 190 QUERY
+ENTRY_BEGIN
+REPLY RD
+SECTION QUESTION
+www.example.com. IN A
+ENTRY_END
+; recursion happens here.
+STEP 200 CHECK_ANSWER
+ENTRY_BEGIN
+MATCH all ttl
+REPLY QR RD RA NOERROR
+SECTION QUESTION
+www.example.com. IN A
+SECTION ANSWER
+www.example.com.	86400 IN A	10.2.2.2
+SECTION AUTHORITY
+example.com.		86400 IN NS	new-ns.example.com.
+SECTION ADDITIONAL
+new-ns.example.com.	86400 IN A	172.16.0.1
 ENTRY_END
 
 SCENARIO_END
